# copilot

./: .all-contributorsrc  .dmypy.json  .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.arm.yml  docker-compose.yml  package.json  pnpm-lock.yaml  requirements.txt
.github/: dependabot.yml
_swaggers/: binance.json  conveyour.json  educational agencies.json  educational_agencies.json  guild_quality.json  kubernetes.json  market_data.json  nl_business_gov.json  openapi (21).json  petstore.json  readme.md  response.html  slack.json  slack_truncated.json  telegram_reduced.json  (+1 more)
entity/: .gitignore  Cargo.toml  diesel.toml  docker-compose.yaml  readme.md
entity/migrations/: 0001_chatbot.sql  0002_chatbot_settings.sql  0003_chat_history.sql  0004_pdf_data_sources.sql  0005_website_data_sources.sql
entity/migrations/2023-11-09-064134_chatbot/: up.sql
entity/migrations/2023-11-09-064434_chatbot_settings/: up.sql
entity/migrations/2023-11-09-065302_pdf_data_source/: up.sql
entity/migrations/2023-11-09-071853_jobs/: up.sql
entity/migrations/2023-11-09-071902_failed_jobs/: up.sql
entity/src/: api_doc.rs  main.rs  schema.rs
entity/src/controllers/: chat_history_controller.rs  chatbot.rs  chatbot_controller.rs  chatbot_setting.rs  chatbot_setting_controller.rs  mod.rs
entity/src/models/: chat_history_model.rs  chatbot.rs  chatbot_model.rs  chatbot_setting.rs  failed_job.rs  jobs.rs  mod.rs  pdf_data_source.rs
entity/src/schemas/: chat_history_schema.rs  chatbot_schema.rs  chatbot_settings.rs  chatbot_settings_schema.rs  mod.rs
(+1349 files in other folders)
