[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
chrono = "0.4.31"
diesel = { version = "1.4.7", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
