[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = {version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sqlx = {version="0.7.2", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"]}
utoipa = {version="4.0.0", features=["actix_extras"]}
utoipa-swagger-ui = {version="4.0.0", features=["actix-web"]}
uuid = {version="1.5.0", features=["v4"]}
